stylesheets/index.css
body {
    margin: 0;
    width: 100vw;
    height: 100vh;
    padding-top: 40px;
    background-color: #ffffff;
    background-image: url("../assets/mobile_bg.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    /* verander naar variabele accent */

    display: flex;
    flex-direction: column;
    align-items: center;

    color: #42434d;

    @media (min-width: 1000px) {
        background-color: #fbf8f5;
        background-image: url("../assets/desktop_bg.png");
        background-size: cover;
        background-attachment: fixed;
    }
}

header {
    display: none;

    @media (min-width: 1000px) {
        display: flex;
        flex-direction: row;
        width: 50vw;
        height: 50px;
        background-color: #f38b46;
        box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.186);
        color: #ffffff;

        margin-bottom: 20px;
        padding: 20px;
        border-radius: 5px;
    }
}

header .price {
    @media (min-width: 1000px) {
        font-size: 25px;
    }
}

main {
    width: 85vw;

    @media (min-width: 1000px) {
        width: 50vw;
        background-color: #fff;
        box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.186);

        padding: 20px;
        border-radius: 10px;
    }
}

hr {
    border: 0;
    border-top: 0.5px solid #f38b46;
    margin-top: 20px;
    margin-bottom: 20px;
}

hr.getPlus {
    @media (min-width: 1000px) {
        display: none;
    }
}

a {
    text-decoration: none;
}

#intro {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 16px;
    margin-bottom: 50px;
}

/* STAPPEN VISUAL */

#steps {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 175px;
    margin-bottom: 15px;
}

.circle {
    height: 30px;
    width: 30px;
    background-color: #f38b46;
    /* verander naar variabele links*/
    border-radius: 50%;
    opacity: 0.5;

    color: #ffffff;
    display: flex;
    justify-content: center;
    align-items: center;
}

.line {
    width: 30px;
    height: 3px;
    background-color: #f38b46;
    /* verander naar variabele links*/
    border-radius: 3px;

}

#isActive {
    height: 30px;
    width: 30px;
    background-color: #f38b46;
    /* verander naar variabele links*/
    border-radius: 50%;
    opacity: 1;

    color: #ffffff;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* CONVERTER */

#converter {
    display: flex;
    flex-direction: column;
    width: 100%;
}

textarea {
    resize: none;
    width: 100%;
}

/* Z.S.M STYLEGUIDE VARIABELEN VAN MAKEN NA TESTEN*/

.buttons {
    display: flex;
    flex-direction: row;
}

a {
    border-radius: 4px;
    outline: none;
    cursor: pointer;
    background: #f2725f;
    color: #fff;
    border: 0;
    padding: 8px 12px;
    white-space: nowrap;
    width: 100px;

    margin-right: 10px;
    margin-top: 10px;

    display: flex;
    align-items: center;
    justify-content: center;

    header a {
        @media (min-width: 1000px) {
            font-size: 25px;
            text-decoration: dotted;
            background-color: #ffffff;
        }
    }
}

a:hover,
input[type="submit"]:hover {
    background: #f05d47;
}

a:focus-visible,
a:active {
    outline-offset: 1px;
    outline: 2px dashed #f38b46;
    background-color: #f05d47;
}

a:focus-visible,
a:active,
textarea:focus-visible,
textarea:active {
    outline-offset: 1px;
    outline: 2px dashed #f38b46;
}

/* RESULT */

#result a {
    width: 150px;
}

.material-symbols-outlined {
    font-variation-settings:
        'FILL' 0,
        'wght' 400,
        'GRAD' 0,
        'opsz' 24
}

/* GET PLUS */
.getPlus {
    display: flex;
    flex-direction: row;

    @media (min-width: 1000px) {
        display: none;
    }
}

h2 {
    @media (min-width: 1000px) {
        display: none;
    }
}

.marketing {
    display: flex;
    flex-direction: column;
}

.price {
    color: #f2725f;
    font-size: 100px;
    font-weight: 800;

    @media (min-width: 1000px) {
        color: #ffffff;
        font-size: 50px;
    }
}

ul {
    list-style: none;
    padding-left: 0;
}

ul li {
    padding-left: 30px;
    background-image: url('data:image/svg+xml,<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.667 5L7.5 14.167L3.333 10" stroke="%23f2725f" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
    background-repeat: no-repeat;
    background-position: left center;
    background-size: 20px 20px;
}

